# pdf_labb

./: LICENSE  README.md  pdf_tools.py  pyproject.toml
src/pdf_labb/: book_object.py  main.py
