[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_labb"
version = "0.0.0"
authors = [
    {name = "Thomas Svensson", email = "thomas@tsvenson.com"},
]
description = "Just a labb project to learn how to manage metadata in PDF:s and manage plenty of PDF-books etc."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["organizer", "console", "pdf", "epub", "mobi"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich",
]

[project.scripts]
pdfbrowser = "pdf_labb.main:main"

[project.urls]
homepage = "https://github.com/tsvenson/pdf_labb"
